--- a/deconfig/jdcloud_ipq60xx_immwrt.config
+++ b/deconfig/jdcloud_ipq60xx_immwrt.config
@@ -98,6 +98,9 @@ CONFIG_KERNEL_BPF_EVENTS=y
 CONFIG_BPF_TOOLCHAIN_HOST=y
 CONFIG_KERNEL_XDP_SOCKETS=y
 CONFIG_PACKAGE_kmod-xdp-sockets-diag=y
+CONFIG_PACKAGE_kmod-sched-bpf=y
+CONFIG_PACKAGE_luci-app-dae=m
+CONFIG_PACKAGE_luci-app-daed=m
 
 # Libraries
 CONFIG_PACKAGE_luci-lib-ipkg=y
