--- a/deconfig/jdcloud_ipq60xx_immwrt.config
+++ b/deconfig/jdcloud_ipq60xx_immwrt.config
@@ -131,6 +131,8 @@ CONFIG_PACKAGE_luci-lib-ipkg=y
 CONFIG_PACKAGE_libopenssl-legacy=y
 
 # Package
+CONFIG_PACKAGE_autocore=y
+CONFIG_PACKAGE_automount=y
 CONFIG_PACKAGE_easytier=n
 CONFIG_PACKAGE_htop=y
 CONFIG_PACKAGE_fuse-utils=y
