--- a/deconfig/jdcloud_ipq60xx_immwrt.config
+++ b/deconfig/jdcloud_ipq60xx_immwrt.config
@@ -109,6 +109,11 @@ CONFIG_PACKAGE_kmod-nf-ipvs=y
 CONFIG_PACKAGE_kmod-nf-nat6=y
 CONFIG_PACKAGE_kmod-dummy=y
 CONFIG_PACKAGE_kmod-veth=y
+## docker
+CONFIG_PACKAGE_kmod-vxlan=y
+CONFIG_PACKAGE_kmod-ipsecn=y
+CONFIG_PACKAGE_kmod-nf-nathelper=y
+CONFIG_PACKAGE_kmod-nf-nathelper-extra=y
 #  nikki kernel dependencies
 CONFIG_PACKAGE_kmod-nft-socket=y
 #  dae kernel dependencies
